--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ArtApp"
+        android:theme="@style/ArtApp.Light"
         tools:targetApi="31">
         <activity
             android:name=".ui.ChallengeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.NewChallengeActivity"
-            android:exported="false"
-            android:theme="@style/Theme.ArtApp" />
+            android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MaterialComponents.Light">
+            android:label="@string/challenges">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
