--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'com.android.application' version '8.2.2' apply false
     id 'com.android.library' version '8.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
 }
 
 ext {
@@ -17,7 +19,7 @@ ext {
     coroutines = '1.5.2'
     lifecycleVersion = '2.4.0'
     materialVersion = '1.4.0'
-    roomVersion = '2.4.3'
+    roomVersion = '2.6.1'
     junitVersion = '4.13.2'
     espressoVersion = '3.4.0'
     androidxJunitVersion = '1.1.3'
